Add intermediate and end conditions